<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.tim.scrabblescorer.ScoringActivity">

    <LinearLayout
        android:id="@+id/namesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/allScoresLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/namesLinearLayout"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:weightSum="3">

        <Button
            android:id="@+id/buttonOpenDictionary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_colour"
            android:onClick="openDictionary"
            android:text="@string/open_dictionary_button"
            android:textAlignment="center"
            android:textColor="@color/text_colour"
            android:typeface="serif" />

        <Button
            android:id="@+id/buttonUndoLastScore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_colour"
            android:onClick="undoLastScore"
            android:text="@string/undo_button"
            android:textAlignment="center"
            android:textColor="@color/text_colour"
            android:typeface="serif" />

        <Button
            android:id="@+id/buttonFinishGame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_colour"
            android:onClick="finishGame"
            android:text="@string/finish_game_button"
            android:textAlignment="center"
            android:textColor="@color/text_colour"
            android:typeface="serif" />


    </LinearLayout>

    <EditText
        android:id="@+id/editTextNewScore"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonRowLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:typeface="serif" />

    <LinearLayout
        android:id="@+id/scoresLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextNewScore"
        android:orientation="horizontal"
        android:paddingBottom="40dp">

    </LinearLayout>

</RelativeLayout>
